// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pagination mount pagination 1`] = `
<ul role="menubar" aria-disabled="false" aria-label="Pagination" class="pagination SharpPagination b-pagination">
	<li role="presentation" aria-hidden="true" class="page-item disabled">
		<span role="menuitem" aria-label="Go to first page" aria-disabled="true" class="page-link">
			<i aria-hidden="true" class="fas fa-angle-double-left"></i>
		</span>
	</li>
	<li role="presentation" aria-hidden="true" class="page-item disabled">
		<span role="menuitem" aria-label="Go to previous page" aria-disabled="true" class="page-link">
			<i aria-hidden="true" class="fas fa-angle-left"></i>
		</span>
	</li>
	<!---->
	<li role="presentation" class="page-item active">
		<a role="menuitemradio" aria-label="Go to page 1" aria-checked="true" aria-posinset="1" aria-setsize="10" tabindex="0" target="_self" href="#" class="page-link">1</a>
	</li>
	<li role="presentation" class="page-item">
		<a role="menuitemradio" aria-label="Go to page 2" aria-checked="false" aria-posinset="2" aria-setsize="10" tabindex="-1" target="_self" href="#" class="page-link">2</a>
	</li>
	<li role="presentation" class="page-item">
		<a role="menuitemradio" aria-label="Go to page 3" aria-checked="false" aria-posinset="3" aria-setsize="10" tabindex="-1" target="_self" href="#" class="page-link">3</a>
	</li>
	<li role="presentation" class="page-item bv-d-xs-down-none">
		<a role="menuitemradio" aria-label="Go to page 4" aria-checked="false" aria-posinset="4" aria-setsize="10" tabindex="-1" target="_self" href="#" class="page-link">4</a>
	</li>
	<li role="separator" class="page-item disabled bv-d-xs-down-none">
		<span class="page-link">…</span>
	</li>
	<li role="presentation" class="page-item">
		<a role="menuitem" tabindex="-1" aria-label="Go to next page" target="_self" href="#" class="page-link">
			<i aria-hidden="true" class="fas fa-angle-right"></i>
		</a>
	</li>
	<li role="presentation" class="page-item">
		<a role="menuitem" tabindex="-1" aria-label="Go to last page" target="_self" href="#" class="page-link">
			<i aria-hidden="true" class="fas fa-angle-double-right"></i>
		</a>
	</li>
</ul>
`;

exports[`pagination mount pagination without end buttons 1`] = `
<ul role="menubar" aria-disabled="false" aria-label="Pagination" class="pagination SharpPagination b-pagination">
	<!---->
	<li role="presentation" aria-hidden="true" class="page-item disabled">
		<span role="menuitem" aria-label="Go to previous page" aria-disabled="true" class="page-link">
			<i aria-hidden="true" class="fas fa-angle-left"></i>
		</span>
	</li>
	<!---->
	<li role="presentation" class="page-item active">
		<a role="menuitemradio" aria-label="Go to page 1" aria-checked="true" aria-posinset="1" aria-setsize="2" tabindex="0" target="_self" href="#" class="page-link">1</a>
	</li>
	<li role="presentation" class="page-item">
		<a role="menuitemradio" aria-label="Go to page 2" aria-checked="false" aria-posinset="2" aria-setsize="2" tabindex="-1" target="_self" href="#" class="page-link">2</a>
	</li>
	<!---->
	<li role="presentation" class="page-item">
		<a role="menuitem" tabindex="-1" aria-label="Go to next page" target="_self" href="#" class="page-link">
			<i aria-hidden="true" class="fas fa-angle-right"></i>
		</a>
	</li>
	<!---->
</ul>
`;
